src/objects/ISO_Country_Codes__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Country_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Country Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Market</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multi_Timezone__c</fullName>
        <defaultValue>false</defaultValue>
        <description>US NOKIASC-23465</description>
        <label>Multi Timezone</label>
        <type>Checkbox</type>
    </fields>
    <label>ISO Country Codes</label>
</CustomObject>